force-app/main/default/objects/Brewer_Registration__c/Brewer_Registration__c.object-meta.xml
<CustomObject>
    <label>Brewer Registration</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brewer Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>