force-app/main/default/objects/Brewer_Registration__c/fields/Account_Commercial_Consent__c.field-meta.xml
<CustomField>
    <fullName>Account_Commercial_Consent__c</fullName>
    <description>Added for the CLM Flow</description>
    <formula>TEXT( Customer__r.Consent_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Commercial Consent</label>
    <type>Text</type>
</CustomField>