force-app/main/default/objects/Brewer_Registration__c/fields/Brewer_Model__c.field-meta.xml
<CustomField>
    <fullName>Brewer_Model__c</fullName>
    <label>Brewer Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>