force-app/main/default/objects/Brewer_Registration__c/fields/Brewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Brewer_Type__c</fullName>
    <label>Brewer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>