force-app/main/default/objects/Brewer_Registration__c/fields/CLM_Welcome_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>CLM_Welcome_Mail_Sent__c</fullName>
    <description>For welcome email journeys</description>
    <label>CLM Welcome Mail Sent</label>
    <type>Date</type>
</CustomField>