force-app/main/default/objects/Brewer_Registration__c/fields/Confirmation_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Send_Date__c</fullName>
    <label>Confirmation Email Send Date</label>
    <type>Date</type>
</CustomField>