force-app/main/default/objects/Brewer_Registration__c/fields/Consumer_Country__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Country__c</fullName>
    <description>Added to make the CLM Flow working</description>
    <formula>TEXT( Customer__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Country</label>
    <type>Text</type>
</CustomField>