force-app/main/default/objects/Brewer_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brewer Registrations</relationshipLabel>
    <relationshipName>Brewer_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>