force-app/main/default/objects/Brewer_Registration__c/fields/Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Location__c</fullName>
    <label>Purchase Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>