force-app/main/default/objects/Brewer_Registration__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <label>Retailer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>