force-app/main/default/objects/Brewer_Registration__c/fields/Voucher_1__c.field-meta.xml
<CustomField>
    <fullName>Voucher_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher 1</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Brewer Registrations (Voucher 1)</relationshipLabel>
    <relationshipName>Voucher_1</relationshipName>
    <type>Lookup</type>
</CustomField>