force-app/main/default/objects/Brewer_Registration__c/fields/Voucher_1_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Voucher_1_Expiration_Date__c</fullName>
    <label>Voucher 1 Expiration Date</label>
    <type>Date</type>
</CustomField>