force-app/main/default/objects/Brewer_Registration__c/fields/Voucher_2__c.field-meta.xml
<CustomField>
    <fullName>Voucher_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher 2</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Brewer Registrations (Voucher 2)</relationshipLabel>
    <relationshipName>Voucher_2</relationshipName>
    <type>Lookup</type>
</CustomField>