force-app/main/default/objects/Brewer_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registration_Date__c</columns>
    <columns>Brand__c</columns>
    <columns>Country__c</columns>
    <columns>Brewer_Type__c</columns>
    <columns>Brewer_Model__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>